v1/advanced/asset-versioning.mdx
---
title: Asset Versioning
---

<Warning>This is documentation for Inertia.js v1, which is no longer actively maintained. Please refer to the [v2 docs](/v2) for the latest information.</Warning>

One common challenge when building single-page apps is refreshing site assets when they've been changed. Thankfully, Inertia makes this easy by optionally tracking the current version of your site assets. When an asset changes, Inertia will automatically make a full page visit instead of a XHR visit on the next request.

## Configuration

To enable automatic asset refreshing, you need to tell Inertia the current version of your assets. This can be any arbitrary string (letters, numbers, or a file hash), as long as it changes when your assets have been updated.

Typically, your application's asset version can be specified within the `version` method of the Inertia `HandleInertiaRequests` middleware.

<CodeGroup>

```php Laravel icon="laravel"
class HandleInertiaRequests extends Middleware
{
    public function version(Request $request)
    {
        return parent::version($request);
    }
}
```

```csharp .NET icon="dotnet"
using InertiaCore;

// Asset versioning is handled automatically when using
// AddViteHelper() — it reads the Vite manifest hash.
// You can also set a version manually:
Inertia.Version("v2.0.0");

// Or use a callback for lazy evaluation:
Inertia.Version(() => ComputeVersionHash());
```

</CodeGroup>

Alternatively, the asset version can be provided manually using the `Inertia::version()` method.

<CodeGroup>

```php Laravel icon="laravel"
use Inertia\Inertia;

Inertia::version($version);
Inertia::version(fn () => $version); // Lazily...
```

```csharp .NET icon="dotnet"
using InertiaCore;

Inertia.Version(version);
Inertia.Version(() => version); // Lazily...
```

</CodeGroup>

## Cache Busting

Asset refreshing in Inertia works on the assumption that a hard page visit will trigger your assets to reload. However, Inertia doesn't actually do anything to force this. Typically this is done with some form of cache busting. For example, appending a version query parameter to the end of your asset URLs.

If you're using Laravel Mix, you can do this automatically by enabling [versioning](https://laravel.com/docs/mix#versioning-and-cache-busting) in your `webpack.mix.js` file. When using Laravel's Vite integration, asset versioning is done automatically.
